tests/valid/closure/capture_function_param.facet
fn main(y: unrestricted isize) -> unrestricted isize {
    let f = closure [y](x: unrestricted isize) -> unrestricted isize { y } in
    (f 1)
}
