tests/invalid/linear_affine_error/linear_double_use.facet
fn f(x: linear isize) -> linear isize {
  let a: linear isize = x;
  let b: linear isize = x;
  a
}
